--- a/src/OMD/OMDApp/templates/base.html
+++ b/src/OMD/OMDApp/templates/base.html
@@ -6,8 +6,10 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% block css %}{% endblock css %}
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
@@ -36,11 +38,14 @@
       </div>
       <footer class="bg-dark text-center text-white">
           {% block footer %} 
-                <!-- Grid container -->
-                <!-- Grid container -->
-            
-                <!-- Copyright -->
-                <!-- Copyright -->
+            <footer class="text-muted py-4">
+                <div class="container">
+                    <p class="float-end mb-1">
+                        <a href="">Volver arriba</a>
+                    </p>
+                    <p align="left" class="mb-1">&copy; Ingeniería de Software II - Grupo 27</p>
+                </div>
+            </footer>
           {% endblock %}
       </footer>
     </div>
