--- a/src/OMD/OMDApp/templates/navbar_landing.html
+++ b/src/OMD/OMDApp/templates/navbar_landing.html
@@ -4,7 +4,7 @@
 <nav class="navbar sticky-top navbar-expand-md bg-light" role="navigation">
     <div class="container-fluid">
       <a class="navbar-brand" href="">
-        <img src="{% static 'img/logo.png' %}" alt="Logo" width="50" height="50" class="d-inline-block align-text-middle">
+        <img src="{% static 'img/logo.png' %}" alt="Logo" width="50" height="50" class="d-inline-block align-text-middle ms-3">
             Oh My Dog
       </a>
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
