--- a/src/OMD/OMDApp/templates/base.html
+++ b/src/OMD/OMDApp/templates/base.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    {% block head %}
-    <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+    <link rel="shortcut icon" href="{% static 'img/logo.png' %}">
     {% block css %}{% endblock css %}
-    <title>{% block title %}{% endblock %}</title>
-    {% endblock %}
+    <title>{% block title %} Oh My Dog {% endblock title %}</title>
 </head>
 
-{% block body %}
-<body class="d-flex flex-column min-vh-100"> 
-    <header>
-        {% block navbar %}
-        {% endblock %}
-    </header>
-    <main>
+<body>
+    {% block navbar %}
+    {% include 'navbar_landing.html' %}
+    {% endblock navbar %}
+
+    <main id="main">
         {% for message in messages %}
             <div class="container-fluid p-0">
                 <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
@@ -28,19 +26,17 @@
                 </div>
             </div>
         {% endfor %}
-        {% block content %}
-        {% endblock %}
+        {% block content %} {% endblock content %}
     </main>
-    <div class="w-100 mt-auto">
-        <div class="container mb-5">
-            {% block buttons %} 
-            {% endblock %}
-        </div>
-        {% block footer %} 
-        <footer class="footer text-center text-lg-start bg-dark text-muted position-relative bottom-0 top-0 w-100">
-            {% include 'footer.html' %}
-        </footer>
-        {% endblock %}
-    </div>
+
+    {% block footer %}
+    {% include "footer.html" %}
+    {% endblock footer %}
+
+    <script type="javascript" src="{% static 'js/jquery.min.js' %}"></script>
+    <script type="javascript" src="{% static 'js/bold-and-bright.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    {% block js %}{% endblock js %}
 </body>
-{% endblock %}
+
+</html>
