--- a/src/OMD/OMDApp/templates/land_page.html
+++ b/src/OMD/OMDApp/templates/land_page.html
@@ -3,66 +3,31 @@
   {{ block.super }}
   {% block css %}
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth&amp;display=swap" />
   {% endblock css %}
-{% endblock %}
-
-{% block navbar %}
-{% include 'navbar_landing.html' %}
 {% endblock %}
 
 {% block title %}Bienvenido{% endblock %}
     
 {% block content %}
 <main>
-  <div class="container about">
-    <div class="container d-flex flex-column py-5">
-      <div id="carouselControlsBigScreen" class="carouselBigScreen carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselControlsBigScreen" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselControlsBigScreen" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselControlsBigScreen" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <div class="d-flex flex-column justify-content-center mt-5 mb-5 align-items-center">
+    <div class="card">
+      <div class="card-body text-center d-flex flex-column align-items-center border bg-light" style="padding: 5rem">
+        <h1 class="fw-bold">¡Bienvenidos!</h1>
+        <img alt="Logo" src="{% static 'img/logo.png' %}"class="resize my-3" />
+        <div class="text-center">
+          <h2 class="fw-bold">Oh My Dog</h2>
+          <p class="fw-bold" style="
+              color: #b5a166;
+              font-style: italic;
+              font-family: Amaranth, sans-serif;
+              text-align: center;
+              letter-spacing: 1px;
+            ">
+            Pruebawa
+          </p>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active c-item">
-            <img src="{% static 'img/perro1.png' %}" class="d-block w-100 c-img" alt="DISCIPLINAS">
-            <div class="carousel-caption bot-0 my-auto">
-                <h1 class="display-5 fw-bolder text-capitalize">Disciplinas</h1>
-                <p class="fs-5">
-                  Vas a poder ver las disciplinas en las que te encontrás inscripto.
-                  Además, es posible listar todas las disciplinas que ejercemos en el club.
-                </p>
-            </div>
-          </div>
-          <div class="carousel-item c-item">
-            <img src="{% static 'img/perro2.png' %}" class="d-block w-100 c-img" alt="ESTADÍSTICAS">
-            <div class="carousel-caption bot-0 my-auto">
-                <h1 class="display-5 fw-bolder text-capitalize">Estadísticas</h1>
-                <p class="fs-5">
-                  Podrás consultar las estadísticas relacionadas al club, con diversos
-                  tipos de gráficos. 
-                </p>
-            </div>
-          </div>
-          <div class="carousel-item c-item">
-            <img src="{% static 'img/perro3.png' %}" class="d-block w-100 c-img" alt="PAGOS">
-            <div class="carousel-caption bot-0 my-auto">
-                <h4 class="display-5 fw-bolder text-capitalize">Pagos</h4>
-                <p class="fs-5">
-                  Vas a poder ver tus cuotas y el estado de las mismas.
-                  Además, podrás registrar tus pagos.  
-                </p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselControlsBigScreen" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselControlsBigScreen" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
     </div>
   </div>
