--- a/src/OMD/OMDApp/templates/accounts/account_activation_email.html
+++ b/src/OMD/OMDApp/templates/accounts/account_activation_email.html
@@ -1,7 +1,9 @@
 {% autoescape off %}
 Hola {{ user.first_name }} {{ user.last_name }},
 
-Por favor, haz click en el link para confirmar tu registro:
+Esta es su contraseña para confirmar su registro:
 
-http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+{{ password }}
+
+No comparta su contraseña con nadie.
 {% endautoescape %}
