[FIX] permisos en modelos, home y navbar

--- a/src/OMD/OMDApp/templates/base.html
+++ b/src/OMD/OMDApp/templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
     {% block navbar %}
-    {% include 'navbar_landing.html' %}
+    {% include 'navbar.html' %}
     {% endblock navbar %}
 
     <main id="main">
