--- a/src/OMD/OMDApp/templates/navbar.html
+++ b/src/OMD/OMDApp/templates/navbar.html
@@ -3,7 +3,7 @@
 
 <nav class="navbar sticky-top navbar-expand-md bg-light" role="navigation">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'landing' %}">
+      <a class="navbar-brand" href="{% url 'home' %}">
         <img src="{% static 'img/logo.png' %}" alt="Logo" width="50" height="50" class="d-inline-block align-text-middle ms-3">
             Oh My Dog
       </a>
@@ -12,23 +12,37 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-2">
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/">Mis perros</a>
+            </li>
+          {% endif %}
           <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Servicios</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">Donaciones</a>
-          </li>
+          {% if perms.OMDApp.Veterinario %}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/">Donaciones</a>
+            </li>
+          {% endif %}
           <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Nosotros</a>
           </li>
           <div class="vr"></div>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-left: 0%;">
+                {% if user.is_authenticated %} {{ user.first_name }} {% else %}
                 Acceder
+                {% endif %}
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
+                {% if user.is_authenticated %}
+                  <li><a class="dropdown-item" href="/">Perfil</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar sesión</a></li>
+                {% else %}
                   <li><a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a></li>
                   <li><a class="dropdown-item" href="{% url 'register' %}">Registrarse</a></li>
+                {% endif %}
             </ul>
           </li>
         </ul>
