--- a/src/OMD/OMDApp/templates/accounts/register.html
+++ b/src/OMD/OMDApp/templates/accounts/register.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block css %}
+	<link rel="stylesheet" href="{% static 'css/form.css' %}">
+{% endblock css %}
 
 {% block content %} 
 <!--Register--> 
-<div class="container py-5">
-	<h1>Registro</h1>
+<div class="container py-5 form_width">
+	<h1 class="text-center fw-semibold mb-4">Registro{% if dog_register %} del perro{% endif %}</h1>
 	<form method="POST">
 		{% csrf_token %}
 		{{ register_form.as_p }}
-		<button class="btn btn-primary" type="submit">Register</button>
+		<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
+			<button class="btn btn-primary" type="submit">{% if dog_register %}Registrar{% else %}Continuar{% endif %}</button>
+		</div>
 	</form>
-	<p class="text-center">Si ya tienes una cuenta, <a href="login/">inicia sesión</a>.</p>
 </div>
 {% endblock %}
