--- a/src/OMD/OMDApp/templates/accounts/login.html
+++ b/src/OMD/OMDApp/templates/accounts/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block css %}
-	<link rel="stylesheet" href="{% static 'css/form.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
 {% endblock css %}
 
 {% block content %}
@@ -12,7 +12,7 @@
 		{% csrf_token %}
         {{ form.as_p }}
 		<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
-			<button class="btn btn-primary" type="submit">Iniciar sesión</button>
+			<button class="btn btn-primary" type="submit">Aceptar</button>
 		</div>
 	</form>
 </div>
