[FIX] Permisos en model y navbar

--- a/src/OMD/OMDApp/templates/footer.html
+++ b/src/OMD/OMDApp/templates/footer.html
@@ -25,7 +25,7 @@
             Oh My Dog
           </h6>
           <p class="mx-auto d-flex justify-content-center">
-            <img alt="Logo" src="{% static 'img/logo.png' %}" style="height:5rem;" />
+            <img alt="Logo" src="{% static 'img/hueso.png' %}" style="height:5rem;" />
           </p>
         </div>
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 d-flex justify-content-center">
