--- a/src/OMD/OMDApp/templates/navbar.html
+++ b/src/OMD/OMDApp/templates/navbar.html
@@ -4,15 +4,14 @@
 <nav class="navbar sticky-top navbar-expand-md bg-light" role="navigation">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static 'img/logo.png' %}" alt="Logo" width="50" height="50" class="d-inline-block align-text-middle ms-3">
-            Oh My Dog
+        <img src="{% static 'img/hueso.png' %}" alt="Logo" width="60" height="50" class="d-inline-block align-text-middle ms-3">
       </a>
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-2">
-          {% if user.is_authenticated and not perms.OMDApp.Veterinario %}
+          {% if perms.OMDApp.is_client %}
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Mis perros</a>
             </li>
@@ -20,7 +19,7 @@
           <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Servicios</a>
           </li>
-          {% if perms.OMDApp.Veterinario %}
+          {% if perms.OMDApp.is_vet %}
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Donaciones</a>
             </li>
@@ -29,26 +28,24 @@
               <a class="nav-link" aria-current="page" href="/">Nosotros</a>
           </li>
           <div class="vr"></div>
+          {% if user.is_authenticated %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-left: 0%;">
-                {% if user.is_authenticated %}
-                  {{ user.first_name }}
-                {% else %}
-                  Acceder
-                {% endif %}
+                {{ user.first_name }}
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-                {% if user.is_authenticated %}
-                  <li><a class="dropdown-item" href="/">Perfil</a></li>
-                  {% if perms.OMDApp.Veterinario %}
-                    <li><a class="dropdown-item" href="{% url 'register' %}">Registrar cliente</a></li>
-                  {% endif %}
-                  <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar sesión</a></li>
-                {% else %}
-                  <li><a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a></li>
+                <li><a class="dropdown-item" href="/">Perfil</a></li>
+                {% if perms.OMDApp.is_vet %}
+                  <li><a class="dropdown-item" href="{% url 'register' %}">Registrar cliente</a></li>
                 {% endif %}
+                <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar sesión</a></li>
             </ul>
           </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{% url 'login' %}">Iniciar sesión</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </div>
