--- a/src/OMD/OMDApp/templates/accounts/login.html
+++ b/src/OMD/OMDApp/templates/accounts/login.html
@@ -11,11 +11,11 @@
 		<h1 class="text-center fw-semibold mb-4">Inicio de sesión</h1>
 		<form method="POST">
 			{% csrf_token %}
-			<div class="form-floating">
+			<div class="form-floating mb-3">
 				<input type="username" name="username" id="floatingInput" class="form-control" placeholder="Email" required>
 				<label for="floatingInput">Email</label>
 			</div>
-			<div class="form-floating">
+			<div class="form-floating mb-3">
 				<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Contraseña" required>
 				<label for="floatingPassword" >Contraseña</label>
 			</div>
