--- a/src/OMD/OMDApp/templates/accounts/login.html
+++ b/src/OMD/OMDApp/templates/accounts/login.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <!--Log in-->
-<body class="text-center form-signin w-100 m-auto">
+<body class="form-signin w-100 m-auto">
 	<div class="container py-5 form_width">
 		<h1 class="text-center fw-semibold mb-4">Inicio de sesión</h1>
 		<form method="POST">
