Cambiar contraseña funcionando

--- a/src/OMD/OMDApp/templates/accounts/edit_password.html
+++ b/src/OMD/OMDApp/templates/accounts/edit_password.html
@@ -1,35 +1,42 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block css %}
-	<link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
+	<link rel="stylesheet" href="{% static 'css/form.css' %}">
 {% endblock css %}
 
-{% block content %}
-<!--Password change-->
+{% block content %} 
+<!--Register--> 
 <body class="form-signin w-100 m-auto">
 	<div class="container py-5 form_width">
-		<h1 class="text-center fw-semibold mb-4">Cambiar contraseña</h1>
+		<h1 class="text-center fw-semibold mb-4">Cambiando contraseña</h1>
 		<form method="POST">
 			{% csrf_token %}
-			{{ form.as_p }}
-	
-            <div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
-                <button class="btn btn-primary" type="submit">Cambiar contraseña</button>
-                {% if not first_time %}
-                    <a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
+
+			{% for field in form %}
+				<div class="mb-3">
+					<label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+					<input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}" name="{{ field.html_name }}">
+					{% if field.help_text %}
+						<small class="form-text text-muted">{{ field.help_text }}</small>
+					{% endif %}
+					{% for error in field.errors %}
+						<small class="form-text text-danger">{{ error|escape }}</small>
+					{% endfor %}
+					{% if field.help_text %}
+						<div class="form-text">{{ field.help_text }}</div>
+					{% endif %}
+				</div>
+			{% endfor %}
+
+			<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
+                <button class="btn btn-primary" type="submit">Aceptar</button>
+                {% if confirmed %}
+                    <a href="{% url 'profile' %}" class="btn btn-secondary">Cancelar</a>
                 {% else %}
-                    <a href="{% url 'logout' %}" class="btn btn-secondary">Cerrar sesion</a>
+                    <a href="{% url 'logout' %}" class="btn btn-secondary">Cerrar sesión</a>
                 {% endif %}
             </div>
-			<p class="mt-5 mb-3 text-muted">&copy; Ingeniería de software II - Grupo 27</p>
-	
 		</form>
 	</div>
 </body>
-{% block footer %}{% endblock %}
-
 {% endblock %}
-
-<style>
-
-</style>
