--- a/src/OMD/OMDApp/templates/accounts/edit_profile.html
+++ b/src/OMD/OMDApp/templates/accounts/edit_profile.html
@@ -15,7 +15,7 @@
 			{% include "form_error.html" with form=form %}
 			<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
 				<button class="btn btn-primary" type="submit">Aceptar</button>
-				<a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
+				<a href="{% url 'profile' %}" class="btn btn-secondary">Cancelar</a>
 			</div>
 		</form>
 	</div>
