--- a/src/OMD/OMDApp/static/css/form.css
+++ b/src/OMD/OMDApp/static/css/form.css
@@ -6,15 +6,14 @@
 
 @media screen and (min-width: 768px){
     .form_width{
-        width: 47%;
+        width: 57%;
     }
 }
 
-.button.block {
-    display: block;
-    width: 200px;    
-}
 
-.margin-auto {
-    margin: 0 auto;
+-webkit-slider-thumb,
+.form-range:focus::-webkit-slider-thumb, 
+.form-range:focus::-moz-range-thumb,
+.form-range:focus::-ms-thumb {
+    box-shadow: #b5a369;
 }
