--- a/src/OMD/OMDApp/static/css/style.css
+++ b/src/OMD/OMDApp/static/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');
 body {
-  background-color: #e3e3ec;
+  background-color: white;
   font-family: 'Montserrat', Helvetica, sans-serif;
   font-size: 14px;
   color: black;
@@ -21,9 +21,7 @@ body {
 #main {
   width: 75%;
   margin: 0 auto;
-  background-color: #FFF;
-  padding: 20px 40px;
-  border: solid 1px black;
+  padding: 10px 20px;
   margin-top: 20px;
   min-height: 400px;
 }
@@ -98,31 +96,7 @@ a.link {
   float: right;
 }
 
-tr.disabled {
-  color: #bbb !important;
-}
-
-p.flash {
-  width: 100%;
-  padding: 5px;
-}
-
-p.flash.error {
-  border: 3px solid red;
-  background-color: #ff440070;
-}
-
-p.flash.success {
-  border: 3px solid green;
-  background-color: #acff2f70;
-}
-
-p.flash.info {
-  border: 3px solid blue;
-  background-color: #0000ff6e;
-}
-
 .btn-primary-custom {
-  background-color: #4195af  !important;
-  color: white;
+  background-color: #52bede !important;
+  color: black;
 }
