--- a/src/OMD/OMDApp/templates/accounts/edit_password.html
+++ b/src/OMD/OMDApp/templates/accounts/edit_password.html
@@ -5,28 +5,14 @@
 {% endblock css %}
 
 {% block content %} 
-<!--Register--> 
+<!--Edit password--> 
 <body class="form-signin w-100 m-auto">
 	<div class="container py-5 form_width">
 		<h1 class="text-center fw-semibold mb-4">Cambiando contraseña</h1>
 		<form method="POST">
 			{% csrf_token %}
 
-			{% for field in form %}
-				<div class="mb-3">
-					<label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-					<input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}" name="{{ field.html_name }}">
-					{% if field.help_text %}
-						<small class="form-text text-muted">{{ field.help_text }}</small>
-					{% endif %}
-					{% for error in field.errors %}
-						<small class="form-text text-danger">{{ error|escape }}</small>
-					{% endfor %}
-					{% if field.help_text %}
-						<div class="form-text">{{ field.help_text }}</div>
-					{% endif %}
-				</div>
-			{% endfor %}
+			{% include 'form_iterator.html' with form=form %}
 
 			<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
                 <button class="btn btn-primary" type="submit">Aceptar</button>
