--- a/src/OMD/OMDApp/templates/accounts/login.html
+++ b/src/OMD/OMDApp/templates/accounts/login.html
@@ -8,7 +8,7 @@
 <!--Log in-->
 <body class="form-signin w-100 m-auto">
 	<div class="container py-5 form_width">
-		<h1 class="text-center fw-semibold mb-4">Inicio de sesión</h1>
+		<h1 class="text-center fw-semibold mb-4 pt-4">Inicio de sesión</h1>
 		<form method="POST">
 			{% csrf_token %}
 			<div class="form-floating mb-3">
@@ -19,10 +19,13 @@
 				<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Contraseña" required>
 				<label for="floatingPassword" >Contraseña</label>
 			</div>
-	
-			<button class="w-100 btn btn-lg btn-light" type="submit">Iniciar sesión</button>
+
+			
+			<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
+				<button class="btn btn-primary-custom" type="submit">Iniciar sesión</button>
+			</div>
+
 			<p class="mt-5 mb-3 text-muted">&copy; Ingeniería de software II - Grupo 27</p>
-	
 		</form>
 	</div>
 </body>
