--- a/src/OMD/OMDApp/templates/base.html
+++ b/src/OMD/OMDApp/templates/base.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block css %}{% endblock css %}
     <title>{% block title %} Oh My Dog {% endblock title %}</title>
 </head>
@@ -19,14 +20,16 @@
     {% include 'navbar.html' %}
     {% endblock navbar %}
 
-    <main id="main">
-        {% for message in messages %}
-            <div class="container-fluid p-0">
-                <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
-                    {{ message }}
-                </div>
+    {% for message in messages %}
+        <div class="container-fluid p-0 ps-2">
+            <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert" >
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-        {% endfor %}
+        </div>
+    {% endfor %}
+
+    <main id="main">
         {% block content %} {% endblock content %}
     </main>
 
