--- a/src/OMD/OMDApp/templates/dogs/mis_perros.html
+++ b/src/OMD/OMDApp/templates/dogs/mis_perros.html
@@ -6,7 +6,7 @@
   <h1 class="text-center fw-semibold mb-4">Mis perros</h1>
   <div class="row justify-content-center mt-3">
     {% for dog in dog_list %}
-    {% if dog_list|length < 4 %}
+    {% if my_dogs|length < 4 %}
       <div class="col-sm-6 col-md mb-4">
     {% else %}
       <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
@@ -23,7 +23,7 @@
             <p><strong>Raza:</strong> {{ dog.breed }}</p>
             <p><strong>Edad:</strong> {{ dog.age }} </p>
             <div class="card-footer bg-white text-center">
-              <a href="#" class="btn btn-primary">Perfil</a>
+              <a href="{% url 'dog_profile' dog_id=dog.id %}" class="btn btn-primary">Perfil</a>
             </div>
           </div>
         </div>
