[ADD] Edit perfil de perro

--- a/src/OMD/OMDApp/templates/dogs/profile.html
+++ b/src/OMD/OMDApp/templates/dogs/profile.html
@@ -38,7 +38,7 @@
     </div>
   {% endif %}-->
   <div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
-    <a href="{% url 'my_dogs' %}" class="btn btn-primary">Editar</a>
+    <a href="{% url 'dog_edit_profile' %}" class="btn btn-primary">Editar</a>
     <a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
   </div>
 </div>
