[FIX] fechas en editar perfil

--- a/src/OMD/OMDApp/templates/dogs/edit_profile.html
+++ b/src/OMD/OMDApp/templates/dogs/edit_profile.html
@@ -16,7 +16,7 @@
 			
 			<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
 				<button class="btn btn-primary" type="submit">Aceptar</button>
-				<a href="{% url 'dog_profile' dog_id=dog_id|add:"0" %}" class="btn btn-secondary">Cancelar</a>
+				<a href="{% url 'my_dogs' %}" class="btn btn-secondary">Cancelar</a>
 			</div>
 		</form>
 	</div>
