--- a/src/OMD/OMDApp/templates/navbar.html
+++ b/src/OMD/OMDApp/templates/navbar.html
@@ -36,6 +36,22 @@
                 <li><a class="dropdown-item" href="/">Cuidadores</a></li>
             </ul>
           </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-left: 0%;">
+              Turnos
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+            {% if perms.OMDApp.is_client %}
+            <li><a class="dropdown-item" href="{% url 'askForTurn' %}">Pedir turno</a></li>
+            <li><a class="dropdown-item" href="/">Mis turnos</a></li>
+            {% endif %}
+            {% if perms.OMDApp.is_vet %}
+            <li><a class="dropdown-item" href="/">Turnos pendientes</a></li>
+            <li><a class="dropdown-item" href="/">Turnos Aceptados</a></li>
+            {% endif %}
+            </ul>
+          </li>
           {% if perms.OMDApp.is_vet %}
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Donaciones</a>
